# un-sdg-east-africa-insights-pipeline

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sdg_ea_pipeline/: run_pipeline.py
sdg_ea_pipeline/config/: config.yaml  defaults.py  loader.py
sdg_ea_pipeline/deploy/: documentation.py
sdg_ea_pipeline/docs/: architecture.md  deployment.md  governance.md
sdg_ea_pipeline/logic/cleaning/: README.md  clean.py
sdg_ea_pipeline/logic/fe/: README.md  feature_engineering.py
sdg_ea_pipeline/logic/ingestion/: ingest.py
sdg_ea_pipeline/logic/models/: README.md  train_baseline.py
sdg_ea_pipeline/logic/validation/: validate.py
sdg_ea_pipeline/models/: linear_regression.joblib
sdg_ea_pipeline/outputs/insights/: insight_generator.py
sdg_ea_pipeline/outputs/visuals/: prepare_dashboard_exports.py
